--- a/main.html
+++ b/main.html
@@ -8,9 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
 	<p>abacde</p>
 	<p>ddegeiif</p>
 	<p>ioopppeeee</p>
+	</div>
+	<ul>
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
