--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<article>
 	<p>abacde</p>
 	<p>ddegeiif</p>
 	<p>ioopppeeee</p>
-	</div>
+	</article>
 	<ul>
 		<li>First Item</li>
 		<li>Second Item</li>
